Fixing alignment issue

--- a/src/components/FilterBarComponents/MultiSelectComponent/MultiSelect.css
+++ b/src/components/FilterBarComponents/MultiSelectComponent/MultiSelect.css
@@ -2,6 +2,17 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 1em;
+}
+
+.multiSelect-btnContainer, form, label {
+    display: flex;
+    align-items: center;
+    gap: 0.25em;
+    height: 100%;
+}
+
+.multiSelect-btnContainer {
     gap: 0.5em;
 }
 
@@ -11,16 +22,6 @@
     font-size: 0.875em;
     letter-spacing: 0.25em;
     color: #000000;
-}
-
-form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 0.25em;
-    
-    
 }
 
 .multiSelect-btnText{
